fixed wrapping issue on menu

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -75,4 +75,8 @@ input[type='radio']:checked + .color-btn {
   transition: all 0.2s ease-out;
 }
 
+.fit-content {
+  width: fit-content;
+}
+
 @tailwind utilities;
